[gd_scene load_steps=7 format=3 uid="uid://bade5vdae4xo0"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_60hky"]
[ext_resource type="Texture2D" uid="uid://deabyuyv32ycx" path="res://sprites/boss-temp.png" id="1_h7wd3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2v3ud"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_36efm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6422j"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pe8h7"]
_data = {
"RESET": SubResource("Animation_36efm"),
"float": SubResource("Animation_6422j")
}

[node name="Boss" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_60hky")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_h7wd3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2v3ud")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="EruptAttackLength" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="EruptAttackCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
libraries = {
"": SubResource("AnimationLibrary_pe8h7")
}

[node name="ProjectileSpawn" type="Node2D" parent="."]

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ThrowAttackCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ThrowAttackLength" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="EruptAttackLength" to="." method="stop_attacking"]
[connection signal="timeout" from="EruptAttackCooldown" to="." method="_on_erupt_attack_cooldown_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="ThrowAttackCooldown" to="." method="_on_throw_attack_cooldown_timeout"]
[connection signal="timeout" from="ThrowAttackLength" to="." method="stop_attacking"]
